<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegisterBusinessActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/registerUserPassR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contrasenyaRep"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/baloo"
                android:text="@string/contrasenyaRep"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/registerUserPass"
                app:layout_constraintTop_toBottomOf="@+id/registerUserPass" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/baloo"
                android:text="@string/usuario"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/registerUserEmail"
                app:layout_constraintTop_toBottomOf="@+id/registerUserEmail" />

            <EditText
                android:id="@+id/registerUserUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/usuario"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/baloo"
                android:text="@string/correo"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@+id/registerUserEmail"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/baloo"
                android:text="@string/contrasenya"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/registerUserUsuario"
                app:layout_constraintTop_toBottomOf="@+id/registerUserUsuario" />

            <EditText
                android:id="@+id/registerUserPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contrasenya"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/registerUserEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_holevento"
                tools:srcCompat="@drawable/logo_holevento" />

            <Button
                android:id="@+id/btnUserRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/baloo"
                android:text="@string/btnRegistrarse"
                app:layout_constraintEnd_toEndOf="@+id/registerUserPassR"
                app:layout_constraintHorizontal_bias="0.557"
                app:layout_constraintStart_toStartOf="@+id/registerUserPassR"
                app:layout_constraintTop_toBottomOf="@+id/registerUserPassR" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>